# basalt

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  VERSION.in
include/basalt/api/: basalt_vio.h
include/basalt/linearization/: imu_block.hpp  landmark_block.hpp  landmark_block_abs_dynamic.hpp  linearization_abs_qr.hpp
include/basalt/optical_flow/: frame_to_frame_optical_flow.h  optical_flow.h
include/basalt/utils/: ba_utils.h  common_types.h  vio_config.h
include/basalt/vi_estimator/: ba_base.h  landmark_database.h  sc_ba_base.h
scripts/: monitor.py  pack_lib.sh
src/: vio.cpp  vio_ros2_realsense.cpp
src/api/: basalt_vio.cpp
src/linearization/: linearization_abs_qr.cpp
src/optical_flow/: optical_flow.cpp
src/utils/: keypoints.cpp  vio_config.cpp
src/vi_estimator/: ba_base.cpp  landmark_database.cpp  marg_helper.cpp  nfr_mapper.cpp  sc_ba_base.cpp  sqrt_ba_base.cpp  sqrt_keypoint_vio.cpp
test/src/api/: test_basalt_vio.cpp
